# meowOS

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DEVELOPING.md  README.md  flake.nix
.github/workflows/: binutils.yml  build.yml  gcc-stage1.yml  glibc.yml
bench/: benchmark.cpp
docs/: ARCHITECTURE.md  BUILDER.md  COMMANDS.md  README.md  ROADMAP.md  architecture.md  benchmark-methodology.md  bootstrap.md  cache.md  doctor.md  downloads.md  hooks.md  index.md  optional-dependencies.md  package-groups.md  package-history.md  package-index-signing-implementation-plan.md  package-signing-design.md  packaging.md  parallel-integration-design.md  release-readiness-v0.7.md  repositories.md  repository-selection.md  repository-server.md  reproducible.md  resolver-comparison.md  sat-default-criteria.md  security-architecture-review-v0.5.md  security-audit-v0.5.md  security-review-ba9fea1.md  security-testing.md  security.md  testing.md
examples/: hello.toml
meow/include/meow/: cli.hpp
meow/include/meow/archive/: archive.hpp
meow/include/meow/bootstrap/: bootstrap.hpp
meow/include/meow/builder/: builder.hpp
meow/include/meow/cli/: command_parser.hpp
meow/include/meow/config/: config.hpp
meow/include/meow/context/: context.hpp
meow/include/meow/crypto/: keystore.hpp  signature.hpp
meow/include/meow/database/: database.hpp  migration.hpp
meow/include/meow/dependency/: constraint.hpp  iresolver.hpp  legacy_resolver.hpp  resolver.hpp  sat_resolver.hpp  version_pick.hpp
meow/include/meow/doctor/: doctor.hpp
meow/include/meow/download/: downloader.hpp  queue.hpp
meow/include/meow/error/: error.hpp
meow/include/meow/format/: version.hpp
meow/include/meow/hooks/: policy.hpp  runner.hpp
meow/include/meow/install/: installer.hpp
meow/include/meow/lock/: install_lock.hpp  lockfile.hpp
meow/include/meow/log/: logger.hpp
meow/include/meow/package/: package.hpp  parser.hpp
meow/include/meow/remove/: remove.hpp
meow/include/meow/repair/: repair.hpp
meow/include/meow/repo-builder/: repo_builder.hpp
meow/include/meow/repository/: backend.hpp  failover.hpp  http_backend.hpp  index.hpp  manager.hpp  memory_backend.hpp  package_index.hpp  refresh.hpp  repository.hpp  resolver.hpp  security_policy.hpp  status.hpp  version.hpp
meow/include/meow/sat/: clause.hpp  problem.hpp  solver.hpp  translate.hpp
meow/include/meow/sync/: sync.hpp
meow/include/meow/transaction/: transaction.hpp
meow/include/meow/types/: types.hpp
meow/include/meow/update/: updater.hpp
meow/include/meow/upgrade/: upgrade.hpp
meow/include/meow/verify/: verifier.hpp
meow/src/: main.cpp
meow/src/archive/: archive.cpp
meow/src/bootstrap/: bootstrap.cpp
meow/src/builder/: builder.cpp
meow/src/cli/: command_parser.cpp
meow/src/config/: config.cpp
meow/src/crypto/: keystore.cpp  signature.cpp
meow/src/database/: database.cpp  migration.cpp
meow/src/dependency/: constraint.cpp  legacy_resolver.cpp  resolver.cpp  resolver_factory.cpp  sat_resolver.cpp
meow/src/doctor/: doctor.cpp
meow/src/download/: downloader.cpp  queue.cpp
meow/src/error/: printer.cpp
meow/src/format/: version.cpp
meow/src/hooks/: runner.cpp
meow/src/install/: installer.cpp
meow/src/lock/: install_lock.cpp  lockfile.cpp
meow/src/log/: logger.cpp
meow/src/meow-build/: main.cpp
meow/src/meow-repo/: main.cpp
meow/src/meow-server/: main.cpp
meow/src/package/: load.cpp  parser.cpp
meow/src/remove/: remove.cpp
meow/src/repair/: repair.cpp
meow/src/repo-builder/: repo_builder.cpp
meow/src/repository/: backend.cpp  backend_detail.hpp  failover.cpp  http_backend.cpp  index.cpp  manager.cpp  package_index.cpp  refresh.cpp  repository.cpp  resolver.cpp  security_policy.cpp  status.cpp  version.cpp
meow/src/sat/: dpll.cpp  problem.cpp  solver.cpp  translate.cpp
meow/src/sync/: sync.cpp
meow/src/transaction/: transaction.cpp
meow/src/update/: updater.cpp
meow/src/upgrade/: upgrade.cpp
meow/src/verify/: verifier.cpp
pkgs/base-devel/src/: package.toml
pkgs/by-name/ba/bash/: package.toml
pkgs/by-name/bi/binutils/: package.toml
pkgs/by-name/co/coreutils/: package.toml
pkgs/by-name/di/diffutils/: package.toml
pkgs/by-name/fi/findutils/: package.toml
pkgs/by-name/ga/gawk/: package.toml
pkgs/by-name/gc/gcc/: package.toml
pkgs/by-name/gc/gcc-stage1/: package.toml
pkgs/by-name/gc/gcc-stage2/: package.toml
pkgs/by-name/gl/glibc/: package.toml
pkgs/by-name/gr/grep/: package.toml
pkgs/by-name/ma/make/: package.toml
pkgs/by-name/pa/patch/: package.toml
pkgs/by-name/pk/pkgconf/: package.toml
pkgs/filesystem/src/: package.toml
repo/: index.toml  index.toml.sig  packages.toml  packages.toml.sig  public.pem  repository.toml  repository.toml.sig
repo/hello/: package.toml
repo/hello/versions/: 1.0.0.toml  1.1.0.toml
test/: http_fixture.py  integration.sh
test/integration/: FIXTURE_ISOLATION.md  common.sh  http_fixture.py  install.sh  package_features.sh  repository.sh  resolver.sh
test/integration/sections/: 01_basic_install.sh  02_repo_metadata.sh  03_download.sh  04_http.sh  05_doctor.sh  06_reproducible.sh  07_hooks.sh  08_fresh_install.sh  09_server_hosting.sh  10_http_backend.sh  11_multi_repo.sh  12_doctor_repo.sh  13_dual_backend.sh  14_resolver.sh  15_health_state.sh  16_priority.sh  17_mirror_groups.sh  18_mirror_failover.sh  19_parallel_refresh.sh  20_history.sh  21_optionals.sh  22_groups.sh  23_signed_index.sh  anchored-summary.md
test/keys/: meow-release.pem  meow-release.pub
test/rc/: compare_resolvers.py  generate_realistic_repo.py  rc-meow.toml  rc-meta.json
test/repo/: repository.toml
test/security/: run.sh
test/unit/: archive_security_test.cpp  backend_test.cpp  diagnostics_test.cpp  failover_test.cpp  hash_lock_test.cpp  history_test.cpp  optional_test.cpp  package_index_test.cpp  resolver_config_test.cpp  sat_parity_test.cpp  sat_solver_test.cpp  sat_translate_correctness_test.cpp  sat_translate_test.cpp  security_policy_test.cpp  signature_policy_test.cpp  transaction_lock_test.cpp  upgrade_test.cpp
(+57 files in other folders)
